<resources>

    <string name="app_name">点餐系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">点餐系统</string>
    <string name="grid_item_text1">快速下单</string>
    <string name="grid_item_text2">结账</string>
    <string name="grid_item_text3">设  置</string>
    <string name="grid_item_text4">关于</string>
    <string name="desk_num">桌号</string>
    <string name="person_num">人数</string>
    <string name="waiter_num">服务号</string>
    <string name="desk_num_change">更  改</string>
    <string name="back"> 返  回 </string>
    <string name="submit">提  交</string>
    <string name="delete_all">清  空</string>
    <string name="add">新增</string>
    <string name="submit_success">提交成功！</string>
    <string name="submit_fail">提交失败！</string>
    <string name="diancan_success">点餐成功！</string>
    <string name="cancel_success">取消成功！</string>
    <string name="ok">确  认</string>
    <string name="cancel">取消</string>
    <string name="sum">合计:</string>
	<string name="cai_dan">菜单</string>
	<string name="frag_1">面食</string>
	<string name="frag_2">饺子</string>
	<string name="frag_3">小菜</string>
	<string name="frag_4">饮料</string>
	<string name="dian_can">点餐</string>
	<string name="yi_dian">已点</string>
	<string name="tui_jian">推荐</string>
	<string name="edit">编辑</string>
	<string name="delete">删除</string>
	<string name="food_kind">类  别</string>
	<string name="food_name">名  称</string>
	<string name="food_cost">价  格</string>
	<string name="kind1">种类1</string>
	<string name="kind2">种类2</string>
	<string name="kind3">种类3</string>
	<string name="kind4">种类4</string>
	<string name="kind5">种类5</string>
	<string name="kind6">种类6</string>
	<string name="custom">自定义</string>
	<string name="money_unit">元</string>
	<string name="alarm_tittle">确定要删除吗？</string>
	<string name="model">同步模式：</string>
	<string name="model_master">主机</string>
	<string name="model_slave">从机</string>
	<string name="local_NO">本机代号：</string>
	<string name="menu_modify_time">菜谱日期：</string>
	<string name="state">同步状态：</string>
	<string name="stop_syn">停止同步</string>
	<string name="master_NO">主机代号：</string>
	<string name="synchronization_begin">开始同步</string>
	<string name="stop">停  止</string>
	<string name="restaurant_name">店  名</string>
	<string name="soft_regist">软件注册</string>
	<string name="serial_num">序列号</string>
	<string name="active_num">激活码</string>
	<string name="IP_address">192.168.1.200</string>
</resources>