<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" 
	android:layout_width="wrap_content"
	android:background="@drawable/dialog_bg" 
	android:orientation="vertical"
	android:gravity="center" >
	<TextView 
	    android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:gravity="center"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:textStyle="bold"
		android:text="@string/soft_regist"/>
	<TextView 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
		android:layout_width="wrap_content"
		android:textColor="@color/black"
		android:textSize="18sp"
		android:textStyle="bold"
		android:text="@string/serial_num" />
	<TextView android:id="@+id/register_dialog_text"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
		android:layout_width="wrap_content"
		android:textColor="@color/black"
		android:textSize="15sp"
		android:textStyle="bold"
		android:text="0000000000000000" />
	<TextView 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
		android:layout_width="wrap_content"
		android:textColor="@color/black"
		android:textSize="18sp"
		android:textStyle="bold"
		android:text="@string/active_num" />
	<EditText android:id="@+id/register_dialog_edit" 
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_height="wrap_content"
		android:layout_width="wrap_content" 
		android:inputType="text"
		android:textColor="@color/black"
		android:textSize="15sp"
		android:textStyle="bold"
		android:minWidth="160dp"/>
	<LinearLayout 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:layout_marginTop="10dp"
		android:gravity="center">
		<Button
			android:id="@+id/register_dialog_cancel_btn"
			android:layout_marginRight="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="7dp"
			android:background="@drawable/back_selector"
			android:text="@string/cancel"
			android:textColor="@color/white"
			android:textSize="17sp"
			android:textStyle="bold" />
		<Button
			android:id="@+id/register_dialog_ok_btn"
			android:layout_marginLeft="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="7dp"
			android:background="@drawable/submit_selector"
			android:text="@string/ok"
			android:textColor="@color/white"
			android:textSize="17sp"
			android:textStyle="bold" />
	</LinearLayout>
</LinearLayout>