<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" 
	android:layout_width="wrap_content"
	android:background="@drawable/dialog_bg" 
	android:orientation="horizontal" >"
	<TextView android:id="@+id/item1_dialog_text1"
	    android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:textStyle="bold"
		android:text="@string/grid_item_text1"/>
	<TextView android:id="@+id/item1_dialog_text2"
	    android:layout_below="@id/item1_dialog_text1"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="30dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
		android:layout_width="wrap_content"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:textStyle="bold"
		android:text="@string/desk_num" />
	<EditText android:id="@+id/item1_dialog_desk_num" 
	    android:layout_toRightOf="@id/item1_dialog_text2"
	    android:layout_alignBaseline="@id/item1_dialog_text2"
	    android:layout_margin="15dp"
	    android:layout_height="wrap_content"
		android:layout_width="wrap_content" 
		android:inputType="number"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:textStyle="bold"
		android:minWidth="100dip"/>
	<TextView android:id="@+id/item1_dialog_text3"
	    android:layout_below="@id/item1_dialog_text2"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
		android:layout_width="wrap_content"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:textStyle="bold"
		android:text="@string/person_num" />
	<EditText android:id="@+id/item1_dialog_person_num" 
	    android:layout_toRightOf="@id/item1_dialog_text3"
	    android:layout_alignBaseline="@id/item1_dialog_text3"
	    android:layout_margin="15dp"
	    android:layout_height="wrap_content"
		android:layout_width="wrap_content" 
		android:inputType="number"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:textStyle="bold"
		android:minWidth="100dip"/>
	<Button
		android:id="@+id/item1_dialog_cancel_btn"
		android:layout_alignParentLeft="true"
		android:layout_margin="20dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/item1_dialog_text3"
		android:padding="7dp"
		android:background="@drawable/back_selector"
		android:text="@string/cancel"
		android:textColor="@color/white"
		android:textSize="17sp"
		android:textStyle="bold" />
	<Button
		android:id="@+id/item1_dialog_ok_btn"
		android:layout_margin="20dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/item1_dialog_cancel_btn"
		android:layout_toRightOf="@id/item1_dialog_cancel_btn"
		android:padding="7dp"
		android:background="@drawable/submit_selector"
		android:text="@string/ok"
		android:textColor="@color/white"
		android:textSize="17sp"
		android:textStyle="bold" />
</RelativeLayout>