<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item_bg" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/item1_top_bg" >

        <TextView
            android:id="@+id/item2_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/grid_item_text3"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/item2_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignBaseline="@+id/item2_textView"
            android:padding="7dp"
            android:background="@drawable/back_selector"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" >
	    <ListView  
			android:id="@+id/food_list_jiezhang"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:divider="@color/translucence_brown"
			android:dividerHeight="1dp"/>
	</LinearLayout>

    
    <LinearLayout 
		android:orientation="horizontal"	
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	    <TextView 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			android:gravity="right"
			android:paddingRight="20dp"
			android:textSize="20dp"
			android:text="@string/sum" 
			android:textColor="@color/translucence_orange1"/>
	    <TextView android:id="@+id/jiezhang_sum_text" 
	        android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			android:gravity="left"
			android:paddingLeft="20dp"
			android:textSize="20dp"
			android:text="0" 
			android:textColor="@color/translucence_orange1"/>
    </LinearLayout>

    <Button android:id="@+id/submit_btn_jiezhang"
		android:layout_width="fill_parent"
		android:layout_height="35dp"
		android:text="@string/submit"
		android:textSize="17sp"
		android:textColor="@color/white"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="20dp"
		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		android:layout_weight="0"
		android:background="@drawable/send_selector"/>
</LinearLayout>