<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" 
	android:layout_width="wrap_content"
	android:background="@drawable/dialog_bg" 
	android:orientation="horizontal" >"
	<LinearLayout android:id="@+id/menu_delete_dialog_title"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <ImageView android:id="@+id/menu_delete_dialog_alarm_img"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/alarm"
			android:layout_marginLeft="20dp"
			android:layout_marginTop="10dp" />
		<TextView android:id="@+id/menu_delete_dialog_alarm_title"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="@color/black"
			android:textSize="20sp"
			android:textStyle="bold"
			android:layout_marginLeft="30dp"
			android:layout_marginTop="17dp"
			android:text="@string/alarm_tittle"/>
	</LinearLayout>
	<TableLayout 
        android:id="@+id/login_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginTop="8dp"
        android:layout_below="@id/menu_delete_dialog_title" >
        <TableRow 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView android:id="@+id/menu_delete_dialog_text1_1"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="30dp"
				android:text="@string/food_kind"/>
            <TextView android:id="@+id/menu_delete_dialog_text1_2"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="40dp"
				android:text="@string/food_kind"/>
        </TableRow>
        <TableRow 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView android:id="@+id/menu_delete_dialog_text2_1"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="30dp"
				android:text="@string/food_name"/>
            <TextView android:id="@+id/menu_delete_dialog_text2_2"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="40dp"
				android:text="@string/food_name"/>
        </TableRow>
        <TableRow 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView android:id="@+id/menu_delete_dialog_text3_1"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="30dp"
				android:text="@string/food_cost"/>
            <TextView android:id="@+id/menu_delete_dialog_text3_2"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="40dp"
				android:text="@string/food_cost"/>
        </TableRow>
    	<RelativeLayout 
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="8dp" >
    	   <Button
				android:id="@+id/menu_delete_dialog_cancel_btn"
				android:layout_alignParentLeft="true"
				android:layout_marginLeft="30dp"
				android:layout_marginRight="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:background="@drawable/back_selector"
				android:text="@string/cancel"
				android:textColor="@color/white"
				android:textSize="17sp"
				android:textStyle="bold" />
			<Button
				android:id="@+id/menu_delete_dialog_ok_btn"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="70dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBaseline="@id/menu_delete_dialog_cancel_btn"
				android:layout_alignParentRight="true"
				android:padding="10dp"
				android:background="@drawable/submit_selector"
				android:text="@string/ok"
				android:textColor="@color/white"
				android:textSize="17sp"
				android:textStyle="bold" />
    	</RelativeLayout>
    </TableLayout>
</RelativeLayout>