<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" 
	android:layout_width="wrap_content"
	android:background="@drawable/dialog_bg" 
	android:orientation="horizontal" >"
	<TableLayout 
        android:id="@+id/login_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_margin="8dp" >
        <TableRow 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView android:id="@+id/menu_add_dialog_text1"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:text="@string/food_kind"/>
            <TextView android:id="@+id/menu_add_dialog_text2"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_marginLeft="5dp"
				android:layout_marginRight="5dp"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:text=""
				android:gravity="center"/> 
        </TableRow>
        <TableRow 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView android:id="@+id/menu_add_dialog_text3"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_margin="5dp"
				android:text="@string/food_name"/>
            <EditText android:id="@+id/menu_add_dialog_edit3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"/>
        </TableRow>
        <TableRow 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp">
            <TextView android:id="@+id/menu_add_dialog_text4"
			    android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_margin="5dp"
				android:text="@string/food_cost"/>
            <EditText android:id="@+id/menu_add_dialog_edit4"
                android:inputType="number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"/>
        </TableRow>
    	<RelativeLayout 
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="8dp" >
    	   <Button
				android:id="@+id/menu_add_dialog_cancel_btn"
				android:layout_alignParentLeft="true"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:background="@drawable/back_selector"
				android:text="@string/cancel"
				android:textColor="@color/white"
				android:textSize="17sp"
				android:textStyle="bold" />
			<Button
				android:id="@+id/menu_add_dialog_ok_btn"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBaseline="@id/menu_add_dialog_cancel_btn"
				android:layout_alignParentRight="true"
				android:padding="10dp"
				android:background="@drawable/submit_selector"
				android:text="@string/ok"
				android:textColor="@color/white"
				android:textSize="17sp"
				android:textStyle="bold" />
    	</RelativeLayout>
    </TableLayout>
</RelativeLayout>