<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/item_bg" >
    <LinearLayout 
		android:orientation="horizontal"	
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
	    <TextView android:id="@+id/desk_num_text1" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			android:gravity="center"
			android:paddingLeft="40dp"
			android:textSize="30dp"
			android:text="@string/desk_num" 
			android:textColor="@color/translucence_milkblue"/>
	    <TextView android:id="@+id/desk_num_text2" 
	        android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			android:gravity="center"
			android:paddingRight="40dp"
			android:textSize="30dp"
			android:text="0" 
			android:textColor="@color/translucence_milkblue"/>
    </LinearLayout>
    <LinearLayout 
		android:orientation="horizontal"	
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp">
	    <TextView android:id="@+id/desk_num_text3" 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			android:gravity="center"
			android:paddingLeft="40dp"
			android:textSize="30dp"
			android:text="@string/person_num" 
			android:textColor="@color/translucence_milkblue"/>
	    <TextView android:id="@+id/desk_num_text4" 
	        android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1.0"
			android:gravity="center"
			android:paddingRight="40dp"
			android:textSize="30dp"
			android:text="0" 
			android:textColor="@color/translucence_milkblue"/>
    </LinearLayout>
	<Button
		android:id="@+id/desk_num_change_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:padding="10dp"
		android:background="@drawable/send_selector"
		android:text="@string/desk_num_change"
		android:textColor="@color/white"
		android:textSize="18sp"
		android:textStyle="bold" />
</LinearLayout>