<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/item_bg" >
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1" >
	    <ListView  
			android:id="@+id/food_list_yidian"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:divider="@color/translucence_brown"
			android:dividerHeight="1dp"/>
	</LinearLayout>

    
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="center"
	    android:layout_weight="0" >
	    <TextView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.2"
			android:layout_gravity="center"
			android:gravity="center"
			android:layout_marginLeft="10dp"
			android:textSize="20dp"
			android:text="@string/sum" 
			android:textColor="@color/translucence_orange1"/>
	    <TextView android:id="@+id/yidian_sum_text" 
	        android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1.2"
			android:layout_gravity="center"
			android:gravity="center"
			android:layout_marginRight="10dp"
			android:textSize="22dp"
			android:text="0" 
			android:textColor="@color/translucence_orange1"/>
	    <Button android:id="@+id/submit_btn_yidian"
			android:layout_width="fill_parent"
			android:layout_height="35dp"
			android:text="@string/submit"
			android:textSize="15sp"
			android:textColor="@color/white"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:layout_weight="1"
			android:background="@drawable/send_selector"/>
	    <Button android:id="@+id/deleteall_btn_yidian"
			android:layout_width="fill_parent"
			android:layout_height="35dp"
			android:text="@string/delete_all"
			android:textSize="15sp"
			android:textColor="@color/white"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:background="@drawable/send_selector"
			android:layout_weight="1"/>
	</LinearLayout>
</LinearLayout>